fix my UI and added Vitest for frontend